<resources>
    <string name="app_name">Плеер IpTv</string>
    <string name="count_channels">Количество каналов: %d</string>
    <string name="addPlaylis">Добавить плэйлист</string>
    <string name="descriptionPlaylists">Обновить плэйлист или добавьте новый</string>
    <string name="settingsPlaylist">Настройка плэйлиста</string>
    <string name="namePlaylistLabel">Введите назавание Плэйлиста</string>
    <string name="hintInputPlaylist">Введите название листа</string>
    <string name="buttonSelectFilePlaylist">Выберете файл</string>
    <string name="buttonTextPlaylistPathFile">Сохранить</string>
    <string name="warnigPlaylistExist">Плэйлист с таким названием уже существует</string>
    <string name="backChannels">Вернуться к списку каналов</string>
    <string name="menu_item_playlists">Плэйлисты</string>
    <string name="deletePlaylist">Удалить</string>
    <string name="switchActivePlaylist">Активен</string>
    <string name="updatePlaylist">Обновить Плэйлист</string>
    <string name="add_like">Добавить в избранное</string>

</resources>