<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".playlist.PlaylistAddActivity">


    <Switch
        android:id="@+id/switchActivatePlaylist"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:checked="true"
        android:padding="5dp"
        android:text="@string/switchActivePlaylist"
        android:visibility="invisible"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/inputPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:autofillHints="name"
        android:hint="@string/hintInputPlaylist"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/labelPlaylistPathFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonSelectPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/buttonSelectFilePlaylist" />

    <Button
        android:id="@+id/buttonSavePlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:enabled="false"
        android:padding="5dp"
        android:text="@string/buttonTextPlaylistPathFile" />


    <Button
        android:id="@+id/buttonDeletePlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="invisible"
        android:padding="5dp"
        android:text="@string/deletePlaylist"

        />

</LinearLayout>